@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2012-2022 Thomas Akehurst
+ * Copyright (C) 2012-2024 Thomas Akehurst
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,12 +15,7 @@
  */
 package com.github.tomakehurst.wiremock.core;
 
-import static com.github.tomakehurst.wiremock.stubbing.ServeEvent.NOT_MATCHED;
-import static com.github.tomakehurst.wiremock.stubbing.ServeEvent.TO_LOGGED_REQUEST;
-import static com.google.common.base.MoreObjects.firstNonNull;
-import static com.google.common.collect.FluentIterable.from;
-import static com.google.common.collect.Iterables.contains;
-import static com.google.common.collect.Iterables.transform;
+import static com.github.tomakehurst.wiremock.common.ParameterUtils.getFirstNonNull;
 
 import com.github.tomakehurst.wiremock.admin.AdminRoutes;
 import com.github.tomakehurst.wiremock.admin.LimitAndOffsetPaginator;
@@ -30,8 +25,10 @@ import com.github.tomakehurst.wiremock.common.FileSource;
 import com.github.tomakehurst.wiremock.common.xml.Xml;
 import com.github.tomakehurst.wiremock.extension.*;
 import com.github.tomakehurst.wiremock.extension.requestfilter.RequestFilter;
+import com.github.tomakehurst.wiremock.extension.requestfilter.RequestFilterV2;
 import com.github.tomakehurst.wiremock.global.GlobalSettings;
 import com.github.tomakehurst.wiremock.http.*;
+import com.github.tomakehurst.wiremock.http.client.HttpClient;
 import com.github.tomakehurst.wiremock.matching.RequestMatcherExtension;
 import com.github.tomakehurst.wiremock.matching.RequestPattern;
 import com.github.tomakehurst.wiremock.matching.StringValuePattern;
@@ -42,23 +39,19 @@ import com.github.tomakehurst.wiremock.store.SettingsStore;
 import com.github.tomakehurst.wiremock.store.Stores;
 import com.github.tomakehurst.wiremock.stubbing.*;
 import com.github.tomakehurst.wiremock.verification.*;
-import com.google.common.base.Function;
-import com.google.common.base.Optional;
-import com.google.common.base.Predicate;
-import com.google.common.collect.FluentIterable;
-import com.google.common.collect.ImmutableList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-import java.util.UUID;
-import org.apache.commons.lang3.mutable.MutableBoolean;
+import com.jayway.jsonpath.JsonPathException;
+import com.jayway.jsonpath.spi.cache.CacheProvider;
+import com.jayway.jsonpath.spi.cache.NOOPCache;
+import java.util.*;
+import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.stream.Collectors;
 
 public class WireMockApp implements StubServer, Admin {
 
   public static final String FILES_ROOT = "__files";
   public static final String ADMIN_CONTEXT_ROOT = "/__admin";
   public static final String MAPPINGS_ROOT = "mappings";
-  private static final MutableBoolean FACTORIES_LOADING_OPTIMIZED = new MutableBoolean(false);
+  private static final AtomicBoolean FACTORIES_LOADING_OPTIMIZED = new AtomicBoolean(false);
 
   private final Stores stores;
   private final Scenarios scenarios;
@@ -72,13 +65,27 @@ public class WireMockApp implements StubServer, Admin {
   private final NearMissCalculator nearMissCalculator;
   private final Recorder recorder;
   private final List<GlobalSettingsListener> globalSettingsListeners;
+  private final Map<String, MappingsLoaderExtension> mappingsLoaderExtensions;
+  private final Map<String, ServeEventListener> serveEventListeners;
 
   private Options options;
 
+  private Extensions extensions;
+
   public WireMockApp(Options options, Container container) {
-    if (!options.getDisableOptimizeXmlFactoriesLoading() && FACTORIES_LOADING_OPTIMIZED.isFalse()) {
+    if (!options.getDisableOptimizeXmlFactoriesLoading()
+        && Boolean.FALSE.equals(FACTORIES_LOADING_OPTIMIZED.get())) {
       Xml.optimizeFactoriesLoading();
-      FACTORIES_LOADING_OPTIMIZED.setTrue();
+      FACTORIES_LOADING_OPTIMIZED.set(true);
+    }
+
+    try {
+      // Disabling JsonPath's cache due to
+      // https://github.com/json-path/JsonPath/issues/975#issuecomment-1867293053 and the fact that
+      // we're now doing our own caching.
+      CacheProvider.setCache(new NOOPCache());
+    } catch (JsonPathException ignored) {
+      // May fail on subsequent runs, but this doesn't matter
     }
 
     this.options = options;
@@ -91,14 +98,25 @@ public class WireMockApp implements StubServer, Admin {
 
     this.settingsStore = stores.getSettingsStore();
 
+    extensions =
+        new Extensions(
+            options.getDeclaredExtensions(),
+            this,
+            options,
+            stores,
+            options.filesRoot().child(FILES_ROOT));
+    extensions.load();
+
     Map<String, RequestMatcherExtension> customMatchers =
-        options.extensionsOfType(RequestMatcherExtension.class);
+        extensions.ofType(RequestMatcherExtension.class);
+
+    serveEventListeners = extensions.ofType(ServeEventListener.class);
 
     requestJournal =
         options.requestJournalDisabled()
             ? new DisabledRequestJournal()
             : new StoreBackedRequestJournal(
-                options.maxRequestJournalEntries(),
+                options.maxRequestJournalEntries().orElse(null),
                 customMatchers,
                 stores.getRequestJournalStore());
 
@@ -108,25 +126,32 @@ public class WireMockApp implements StubServer, Admin {
             stores.getStubStore(),
             scenarios,
             customMatchers,
-            options.extensionsOfType(ResponseDefinitionTransformer.class),
+            extensions.ofType(ResponseDefinitionTransformer.class),
+            extensions.ofType(ResponseDefinitionTransformerV2.class),
             stores.getFilesBlobStore(),
-            ImmutableList.copyOf(options.extensionsOfType(StubLifecycleListener.class).values()));
-    nearMissCalculator = new NearMissCalculator(stubMappings, requestJournal, scenarios);
-    recorder = new Recorder(this, stores.getRecorderStateStore());
-    globalSettingsListeners =
-        ImmutableList.copyOf(options.extensionsOfType(GlobalSettingsListener.class).values());
+            List.copyOf(extensions.ofType(StubLifecycleListener.class).values()),
+            serveEventListeners);
+    nearMissCalculator =
+        new NearMissCalculator(stubMappings, requestJournal, scenarios, customMatchers);
+    recorder =
+        new Recorder(this, extensions, stores.getFilesBlobStore(), stores.getRecorderStateStore());
+    globalSettingsListeners = List.copyOf(extensions.ofType(GlobalSettingsListener.class).values());
+    this.mappingsLoaderExtensions = extensions.ofType(MappingsLoaderExtension.class);
 
     this.container = container;
+    extensions.startAll();
     loadDefaultMappings();
   }
 
   public WireMockApp(
       boolean browserProxyingEnabled,
       MappingsLoader defaultMappingsLoader,
+      Map<String, MappingsLoaderExtension> mappingsLoaderExtensions,
       MappingsSaver mappingsSaver,
       boolean requestJournalDisabled,
-      Optional<Integer> maxRequestJournalEntries,
+      Integer maxRequestJournalEntries,
       Map<String, ResponseDefinitionTransformer> transformers,
+      Map<String, ResponseDefinitionTransformerV2> v2transformers,
       Map<String, RequestMatcherExtension> requestMatchers,
       FileSource rootFileSource,
       Container container) {
@@ -135,6 +160,7 @@ public class WireMockApp implements StubServer, Admin {
 
     this.browserProxyingEnabled = browserProxyingEnabled;
     this.defaultMappingsLoader = defaultMappingsLoader;
+    this.mappingsLoaderExtensions = mappingsLoaderExtensions;
     this.mappingsSaver = mappingsSaver;
     this.settingsStore = stores.getSettingsStore();
     requestJournal =
@@ -143,27 +169,31 @@ public class WireMockApp implements StubServer, Admin {
             : new StoreBackedRequestJournal(
                 maxRequestJournalEntries, requestMatchers, stores.getRequestJournalStore());
     scenarios = new InMemoryScenarios(stores.getScenariosStore());
+
+    serveEventListeners = Collections.emptyMap();
+
     stubMappings =
         new StoreBackedStubMappings(
             stores.getStubStore(),
             scenarios,
             requestMatchers,
             transformers,
+            v2transformers,
             stores.getFilesBlobStore(),
-            Collections.<StubLifecycleListener>emptyList());
+            Collections.emptyList(),
+            serveEventListeners);
     this.container = container;
-    nearMissCalculator = new NearMissCalculator(stubMappings, requestJournal, scenarios);
-    recorder = new Recorder(this, stores.getRecorderStateStore());
+    nearMissCalculator =
+        new NearMissCalculator(stubMappings, requestJournal, scenarios, requestMatchers);
+    recorder =
+        new Recorder(this, extensions, stores.getFilesBlobStore(), stores.getRecorderStateStore());
     globalSettingsListeners = Collections.emptyList();
     loadDefaultMappings();
   }
 
   public AdminRequestHandler buildAdminRequestHandler() {
     AdminRoutes adminRoutes =
-        AdminRoutes.forServer(
-            options.extensionsOfType(AdminApiExtension.class).values(),
-            options.getNotMatchedRenderer(),
-            stores);
+        AdminRoutes.forServer(extensions.ofType(AdminApiExtension.class).values(), stores);
     return new AdminRequestHandler(
         adminRoutes,
         this,
@@ -171,62 +201,87 @@ public class WireMockApp implements StubServer, Admin {
         options.getAdminAuthenticator(),
         options.getHttpsRequiredForAdminApi(),
         getAdminRequestFilters(),
+        getV2AdminRequestFilters(),
         options.getDataTruncationSettings());
   }
 
   public StubRequestHandler buildStubRequestHandler() {
-    Map<String, PostServeAction> postServeActions = options.extensionsOfType(PostServeAction.class);
+    Map<String, PostServeAction> postServeActions = extensions.ofType(PostServeAction.class);
     BrowserProxySettings browserProxySettings = options.browserProxySettings();
+
+    final com.github.tomakehurst.wiremock.http.client.HttpClientFactory httpClientFactory =
+        extensions
+            .ofType(com.github.tomakehurst.wiremock.http.client.HttpClientFactory.class)
+            .values()
+            .stream()
+            .findFirst()
+            .orElse(options.httpClientFactory());
+
+    final HttpClient reverseProxyClient =
+        httpClientFactory.buildHttpClient(options, true, Collections.emptyList(), true);
+    final HttpClient forwardProxyClient =
+        httpClientFactory.buildHttpClient(
+            options,
+            browserProxySettings.trustAllProxyTargets(),
+            browserProxySettings.trustAllProxyTargets()
+                ? Collections.emptyList()
+                : browserProxySettings.trustedProxyTargets(),
+            false);
+
     return new StubRequestHandler(
         this,
         new StubResponseRenderer(
             options.getStores().getFilesBlobStore(),
             settingsStore,
             new ProxyResponseRenderer(
-                options.proxyVia(),
-                options.httpsSettings().trustStore(),
                 options.shouldPreserveHostHeader(),
                 options.proxyHostHeader(),
                 settingsStore,
-                browserProxySettings.trustAllProxyTargets(),
-                browserProxySettings.trustedProxyTargets(),
                 options.getStubCorsEnabled(),
-                options.getProxyTargetRules()),
-            ImmutableList.copyOf(options.extensionsOfType(ResponseTransformer.class).values())),
+                options.getSupportedProxyEncodings(),
+                reverseProxyClient,
+                forwardProxyClient),
+            List.copyOf(extensions.ofType(ResponseTransformer.class).values()),
+            List.copyOf(extensions.ofType(ResponseTransformerV2.class).values())),
         this,
         postServeActions,
+        serveEventListeners,
         requestJournal,
         getStubRequestFilters(),
+        getV2StubRequestFilters(),
         options.getStubRequestLoggingDisabled(),
-        options.getDataTruncationSettings());
+        options.getDataTruncationSettings(),
+        options.getNotMatchedRendererFactory().apply(extensions));
   }
 
   private List<RequestFilter> getAdminRequestFilters() {
-    return FluentIterable.from(options.extensionsOfType(RequestFilter.class).values())
-        .filter(
-            new Predicate<RequestFilter>() {
-              @Override
-              public boolean apply(RequestFilter filter) {
-                return filter.applyToAdmin();
-              }
-            })
-        .toList();
+    return extensions.ofType(RequestFilter.class).values().stream()
+        .filter(RequestFilter::applyToAdmin)
+        .collect(Collectors.toList());
+  }
+
+  private List<RequestFilterV2> getV2AdminRequestFilters() {
+    return extensions.ofType(RequestFilterV2.class).values().stream()
+        .filter(RequestFilterV2::applyToAdmin)
+        .collect(Collectors.toList());
   }
 
   private List<RequestFilter> getStubRequestFilters() {
-    return FluentIterable.from(options.extensionsOfType(RequestFilter.class).values())
-        .filter(
-            new Predicate<RequestFilter>() {
-              @Override
-              public boolean apply(RequestFilter filter) {
-                return filter.applyToStubs();
-              }
-            })
-        .toList();
+    return extensions.ofType(RequestFilter.class).values().stream()
+        .filter(RequestFilter::applyToStubs)
+        .collect(Collectors.toList());
+  }
+
+  private List<RequestFilterV2> getV2StubRequestFilters() {
+    return extensions.ofType(RequestFilterV2.class).values().stream()
+        .filter(RequestFilterV2::applyToStubs)
+        .collect(Collectors.toList());
   }
 
   private void loadDefaultMappings() {
     loadMappingsUsing(defaultMappingsLoader);
+    if (mappingsLoaderExtensions != null)
+      mappingsLoaderExtensions.values().forEach(e -> loadMappingsUsing(e));
   }
 
   public void loadMappingsUsing(final MappingsLoader mappingsLoader) {
@@ -234,14 +289,15 @@ public class WireMockApp implements StubServer, Admin {
   }
 
   @Override
-  public ServeEvent serveStubFor(Request request) {
-    ServeEvent serveEvent = stubMappings.serveFor(request);
+  public ServeEvent serveStubFor(ServeEvent initialServeEvent) {
+    ServeEvent serveEvent = stubMappings.serveFor(initialServeEvent);
 
-    if (serveEvent.isNoExactMatch()) {
-      LoggedRequest loggedRequest = serveEvent.getRequest();
-      if (request.isBrowserProxyRequest() && browserProxyingEnabled) {
-        return ServeEvent.of(loggedRequest, ResponseDefinition.browserProxy(request));
-      }
+    if (serveEvent.isNoExactMatch()
+        && browserProxyingEnabled
+        && serveEvent.getRequest().isBrowserProxyRequest()
+        && getGlobalSettings().getSettings().getProxyPassThrough()) {
+      return ServeEvent.ofUnmatched(
+          serveEvent.getRequest(), ResponseDefinition.browserProxy(serveEvent.getRequest()));
     }
 
     return serveEvent;
@@ -377,10 +433,10 @@ public class WireMockApp implements StubServer, Admin {
   public FindRequestsResult findUnmatchedRequests() {
     try {
       List<LoggedRequest> requests =
-          from(requestJournal.getAllServeEvents())
-              .filter(NOT_MATCHED)
-              .transform(TO_LOGGED_REQUEST)
-              .toList();
+          requestJournal.getAllServeEvents().stream()
+              .filter(ServeEvent::isNoExactMatch)
+              .map(ServeEvent::getRequest)
+              .collect(Collectors.toList());
       return FindRequestsResult.withRequests(requests);
     } catch (RequestJournalDisabledException e) {
       return FindRequestsResult.withRequestJournalDisabled();
@@ -406,22 +462,17 @@ public class WireMockApp implements StubServer, Admin {
 
   @Override
   public FindNearMissesResult findNearMissesForUnmatchedRequests() {
-    ImmutableList.Builder<NearMiss> listBuilder = ImmutableList.builder();
-    Iterable<ServeEvent> unmatchedServeEvents =
-        from(requestJournal.getAllServeEvents())
-            .filter(
-                new Predicate<ServeEvent>() {
-                  @Override
-                  public boolean apply(ServeEvent input) {
-                    return input.isNoExactMatch();
-                  }
-                });
+    List<NearMiss> nearMisses = new ArrayList<>();
+    List<ServeEvent> unmatchedServeEvents =
+        requestJournal.getAllServeEvents().stream()
+            .filter(ServeEvent::isNoExactMatch)
+            .collect(Collectors.toList());
 
     for (ServeEvent serveEvent : unmatchedServeEvents) {
-      listBuilder.addAll(nearMissCalculator.findNearestTo(serveEvent.getRequest()));
+      nearMisses.addAll(nearMissCalculator.findNearestTo(serveEvent.getRequest()));
     }
 
-    return new FindNearMissesResult(listBuilder.build());
+    return new FindNearMissesResult(nearMisses);
   }
 
   @Override
@@ -478,8 +529,13 @@ public class WireMockApp implements StubServer, Admin {
     return options;
   }
 
+  public Extensions getExtensions() {
+    return extensions;
+  }
+
   @Override
   public void shutdownServer() {
+    extensions.stopAll();
     stores.stop();
     container.shutdown();
   }
@@ -540,7 +596,7 @@ public class WireMockApp implements StubServer, Admin {
   public void importStubs(StubImport stubImport) {
     List<StubMapping> mappings = stubImport.getMappings();
     StubImport.Options importOptions =
-        firstNonNull(stubImport.getImportOptions(), StubImport.Options.DEFAULTS);
+        getFirstNonNull(stubImport.getImportOptions(), StubImport.Options.DEFAULTS);
 
     for (int i = mappings.size() - 1; i >= 0; i--) {
       StubMapping mapping = mappings.get(i);
@@ -554,20 +610,16 @@ public class WireMockApp implements StubServer, Admin {
     }
 
     if (importOptions.getDeleteAllNotInImport()) {
-      Iterable<UUID> ids =
-          transform(
-              mappings,
-              new Function<StubMapping, UUID>() {
-                @Override
-                public UUID apply(StubMapping input) {
-                  return input.getId();
-                }
-              });
+      List<UUID> ids = mappings.stream().map(StubMapping::getId).collect(Collectors.toList());
       for (StubMapping mapping : listAllStubMappings().getMappings()) {
-        if (!contains(ids, mapping.getId())) {
+        if (!ids.contains(mapping.getId())) {
           removeStubMapping(mapping);
         }
       }
     }
+  }
+
+  public Set<String> getLoadedExtensionNames() {
+    return extensions.getAllExtensionNames();
   }
 }
